set info after finish game and start new game
